# AbbVie-CN-Couplings-QSRR-and-HTE

./: .gitignore  README.md  input.cdxml  pyproject.toml
data/: abbvie-substrates.tsv
data/ligand/: aniline_hte_ligand.tsv
data/ligand-qsar/: alkylamine-hte-ligand-data.tsv  alkylamine-ligand-modeling-full.tsv  alkylamine-ligand-modeling.tsv
data/ligand-qsar/raw/: alkylamine-ligand-modeling-unprocessed.tsv
data/reaxys/: cluster_heads.tsv  lit_cluster_heads.tsv
data/reaxys/raw/: 1-5k cn couplings.tsv  10k-12.6k cn couplings.tsv
notebooks/HTE-setup-and-results/1_literature_reactant_extraction/: preparation.ipynb  secondary_and_primary_amines.csv  selected_commercial_mols.csv  selected_commercial_mols_0_request.csv  selected_commercial_mols_10_request.csv  selected_commercial_mols_15_request.csv  selected_commercial_mols_16_request.csv  selected_commercial_mols_1_request.csv  selected_commercial_mols_4_request.csv  selected_commercial_mols_8_request.csv
notebooks/HTE-setup-and-results/3_plate_design/: plate-design.ipynb
notebooks/HTE-setup-and-results/hte_data/: eleclbls.json
notebooks/HTE-setup-and-results/literature_reactant_extraction/: selected_commercial_mols_11_request.csv  selected_commercial_mols_13_request.csv  selected_commercial_mols_2_request.csv  selected_commercial_mols_6_request.csv
notebooks/QSAR/: nh-bivariate-thresholding.ipynb  nh-catalyst-featurization.ipynb  nh-eda.ipynb  nh-linear-regression.ipynb  nh-logistic-regression.ipynb
notebooks/data/: nh-reaxys-processing.ipynb
notebooks/dft/: orca.py
notebooks/ligand-qsar/: nh-catalyst-featurization.ipynb  nh-eda.ipynb  nh-feature-selection.ipynb  nh-linear-regression.ipynb  nh-logistic-regression.ipynb  nh-multivariate-thresholding.ipynb  nh-strucgen.ipynb  nh-tolman.ipynb
notebooks/qsar/: catalysts.mlib  catalysts_prop.mlib  nh-benzylamine-qsar.ipynb
notebooks/visualization/: nh-butina-clustering.ipynb  nh-visualization.ipynb
(+74 files in other folders)
