[project]
name = "abbvie-cn-couplings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arfs>=2.3.2",
    "great-tables[extra]>=0.14.0",
    "interpret>=0.6.5",
    "jupyter>=1.1.1",
    "molli>=1.2.0",
    "molplotly>=1.1.5",
    "molsimplify>=1.7.5",
    "morfeus-ml>=0.7.2",
    "notebook>=7.2.2",
    "orca-parser>=0.2.8",
    "pandas>=2.2.3",
    "pip>=24.2",
    "py3dmol>=2.4.0",
    "rdkit==2024.3.2",
    "rmsd>=1.5.1",
    "scikit-fingerprints>=1.11.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tol-colors>=1.2.1",
    "umap-learn>=0.5.6",
    "xgboost>=2.1.2",
    "yellowbrick>=1.5",
]

[tool.ruff]
line-length = 120
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "I001",# isort
  "D",   # pydocstyle
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]

[[tool.mypy.overrides]]
module = ['*.*']
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "mypy>=1.11.2",
    "ruff>=0.6.8",
]
